--- a/de.wargamer.anime.teamspeak/Erza_SFW.css
+++ b/de.wargamer.anime.teamspeak/Erza_SFW.css
@@ -27,7 +27,7 @@
 
     background-position: 100% 5%, 2% 100% ;
     background-repeat: no-repeat;
-    background-size: 10%, 14% 50% ;
+    background-size: 10%, 14% auto;
 }
 
 /*Remove image from chat Background*/
