--- a/de.wargamer.anime.teamspeak/Koneko_SFW.css
+++ b/de.wargamer.anime.teamspeak/Koneko_SFW.css
@@ -26,7 +26,7 @@
 
     background-position: 50% 106%, -9% 100% ;
     background-repeat: no-repeat;
-    background-size: 50%, 23% 50% ;
+    background-size: 50%, 23% auto;
 }
 
 /*Remove image from chat Background*/
