--- a/de.wargamer.anime.teamspeak/Madara.css
+++ b/de.wargamer.anime.teamspeak/Madara.css
@@ -27,7 +27,7 @@
 
     background-position: 50% 106%, -0% 100% ;
     background-repeat: no-repeat;
-    background-size: 50%, 15% 40% ;
+    background-size: 50%, 15% auto;
 }
 
 /*Remove image from chat Background*/
