--- a/de.wargamer.anime.teamspeak/Megumin_SFW.css
+++ b/de.wargamer.anime.teamspeak/Megumin_SFW.css
@@ -24,7 +24,7 @@
                    url(Megumin_small.png);
     background-position: bottom, -01% ;
     background-repeat: no-repeat;
-    background-size: 50%, 15% 50% ;
+    background-size: 50%, 15% auto;
 }
 /*Remove image from chat Background*/
 .ts-chat-container .ts-background-hexes-container {
